# EVDMeshLib

./: .dockerignore  .gitignore  Cargo.toml  Citation.cff  CombinedGrades_anon.csv  Dockerfile  License  OptimizedParameters.evdplanner.json  Readme.md  check_duplicates.py  landmarks_skin_template.mrk.json  pyproject.toml
evdmeshlib/: __init__.py  __main__.py
evdmeshlib/linalg/: __init__.pyi  vec3.pyi
python/evdmeshlib/: __init__.py
python/evdmeshlib/rs/linalg/: vec3.pyi
python/evdplanner/: __init__.py  __main__.py
python/evdplanner/cli/: __init__.py  __main__.py  plan.py
python/evdplanner/cli/augment/: __init__.py  mesh.py
python/evdplanner/cli/generate/: __init__.py  kocher.py  landmarks.py  target.py
python/evdplanner/cli/model/: __init__.py  _util.py
python/evdplanner/cli/model/optimize/: __init__.py
python/evdplanner/cli/model/predict/: __init__.py
python/evdplanner/cli/model/train/: __init__.py
python/evdplanner/cli/plot/: __init__.py  errors.py  evd.py  keypoints.py  times.py
python/evdplanner/cli/preprocessing/: __init__.py  convert_volume.py  project_mesh.py  snap_landmarks.py
python/evdplanner/cli/validate/: __init__.py  data.py  model.py
python/evdplanner/generation/: __init__.py  closest_intersection.py  generate_landmarks.py  measure_kocher.py
python/evdplanner/geometry/: __init__.py
python/evdplanner/geometry/conversion/: __init__.py  volumes.py
python/evdplanner/linalg/: __init__.py
python/evdplanner/markups/: __init__.py  display_settings.py  fiducial.py  markup.py  markup_manager.py
python/evdplanner/network/: __init__.py  lightning_wrapper.py
python/evdplanner/network/architecture/: __init__.py  point_regressor.py
python/evdplanner/network/training/: __init__.py  datamodule.py  lightning_wrapper.py  optimizable_model.py  train.py  utils.py
python/evdplanner/network/training/callbacks/: __init__.py  keypoint_plot.py
python/evdplanner/network/training/losses/: __init__.py  angular.py
python/evdplanner/network/training/lr_schedulers/: __init__.py  poly_lr_scheduler.py
python/evdplanner/network/training/transforms/: mirror_transforms.py
python/evdplanner/network/training/utils/: __init__.py
python/evdplanner/network/transforms/: __init__.py  defaults.py  json_keypoint_loader.py  keypoint_flip.py  landmarks_loader.py  landmarks_to_keypoints.py  mesh_loader.py  mesh_rand_deform.py  mesh_rand_rotate.py  mesh_rendererer.py  mirror_transforms.py
python/evdplanner/notebooks/: kakarla.ipynb  method_stability.ipynb  plot_colin.ipynb  timing.ipynb
python/evdplanner/rendering/: __init__.py  utils.py
python/evdplanner/rendering/cpu/: __init__.py
python/evdplanner/rendering/gpu/: __init__.py  gpu_renderer.py
python/evdplanner/rs/: __init__.pyi
python/evdplanner/rs/geometry/: __init__.pyi  aabb.pyi  bvh.pyi  deformer.pyi  mesh.pyi
python/evdplanner/rs/linalg/: __init__.pyi  mat4.pyi  vec3.pyi
python/evdplanner/rs/rendering/: __init__.pyi  camera.pyi  intersection.pyi  ray.pyi  renderer.pyi  target.pyi
python/test/network/architecture/: test_point_regressor.py
src/: lib.rs
src/geometry/: aabb.rs  bvh.rs  deformer.rs  intersectable.rs  mesh.rs  mod.rs
src/linalg/: mat4.rs  mod.rs  vec3.rs
src/linalg/simd/: mod.rs  vec3x4.rs
src/rendering/: camera.rs  intersection.rs  mod.rs  projector.rs  ray.rs  renderer.rs  scene.rs  target.rs
src/rendering/cameras/: base_camera.rs  equirectangular_camera.rs  mod.rs  orthographic_camera.rs  perspective_camera.rs  projector.rs
src/rendering/simd/: mod.rs
