[package]
name = "evdplanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "evdplanner"
crate-type = ["cdylib"]

[dependencies]
indicatif = "0.17.7"
itertools = "0.12.0"
ndarray = "0.15.6"
numpy = "0.20.0"
rand = "0.8.5"
rayon = "1.8.0"
stl_io = "0.7.0"

[dependencies.pyo3]
version = "0.20.2"
features = ["abi3-py311", "extension-module"]

