[project]
name = "evdplanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click~=8.1.3",
    "imageio~=2.33.1",
    "numpy~=1.26.0",
    "pillow~=10.2.0",
    "PyMCubes~=0.1.4",
    "scikit-image~=0.22.0",
    "scipy~=1.12.0",
    "SimpleITK~=2.3.1",
    "taichi~=1.6.0",
    "torch~=2.1.2",
    "tqdm~=4.66.1",
]

[project.optional-dependencies]
dev = [
    "maturin >= 1.0, < 2.0",
    "ruff",
    "black",
    "isort"
]

[project.scripts]
evd = "evdplanner.cli.__main__:main"

[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "evdplanner.rs"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "B", "I", "N", "D", "S", "W", "C4", "EM", "PL", "PTH", "ANN"]
ignore = ["D203", "D212", "D401", "ANN101"]
target-version = "py310"
exclude = [
    "tests",
]
line-length = 99

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pylint]
max-args = 10
max-returns = 5
