[project]
name = "evdplanner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "arrow~=1.3.0",
    "click~=8.1.3",
    "crc32c~=2.3.0",
    "imageio~=2.33.1",
    "lightning~=2.1.4",
    "loguru~=0.7.2",
    "matplotlib~=3.8.2",
    "monai~=1.3.0",
    "numpy~=1.26.0",
    "opensimplex~=0.4.5",
    "optuna~=3.5.0",
    "pillow~=10.2.0",
    "PyMCubes~=0.1.4",
    "seaborn~=0.13.2",
    "SimpleITK~=2.3.1",
    "taichi~=1.6.0",
    "tensorboard~=2.16.2",
    "tensorboardx~=2.6.2.2",
    "torch~=2.2.0",
    "tqdm~=4.66.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "maturin >= 1.0, < 2.0",
    "pytest",
    "ruff"
]

[project.scripts]
evd = "evdplanner.cli.__main__:main"

[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "evdplanner.rs"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["python"]

[tool.ruff]
select = ["E", "F", "B", "I", "N", "D", "S", "W", "C4", "EM", "PL", "PTH", "ANN"]
ignore = ["D105", "D200", "D203", "D212", "D401", "ANN101"]
target-version = "py311"
exclude = [
    "tests",
]
line-length = 99
src = ["python"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pylint]
max-args = 10
max-returns = 5

[tool.ruff.pydocstyle]
convention = "numpy"
