[project]
name = "evdplanner"
version = "1.0.0"
authors = [
    { name = "Mathijs de Boer", email = "M.deBoer-41@umcutrecht.nl"}
]
license = { file = "License" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arrow~=1.3.0",
    "click~=8.1.3",
    "crc32c~=2.3.0",
    "imageio~=2.33.1",
    "lightning~=2.1.4",
    "loguru~=0.7.2",
    "matplotlib~=3.8.2",
    "monai~=1.3.0",
    "numpy~=1.26.0",
    "opensimplex~=0.4.5",
    "optuna~=3.5.0",
    "pillow~=10.2.0",
    "PyMCubes~=0.1.4",
    "seaborn~=0.13.2",
    "SimpleITK~=2.3.1",
    "tensorboard~=2.16.2",
    "tensorboardx~=2.6.2.2",
    "torch~=2.2.0",
    "trogon~=0.5.0",
    "tqdm~=4.66.1",
]

[project.optional-dependencies]
notebooks = [
    "jupyter~=1.1.1",
    "statsmodels~=0.14.3"
]

[project.scripts]
evd = "evdplanner.cli.__main__:main"

[build-system]
requires = ["maturin~=1.8.1"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "evdplanner.rs"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["python"]

[tool.ruff]
lint.select = ["F", "E", "W", "N", "UP", "B"]
target-version = "py311"
exclude = [
    "tests",
]
line-length = 99
src = ["python"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 5

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "maturin~=1.8.7",
    "ruff~=0.11.13",
]
